force-app/main/default/objects/Dan360_TablaIntermediaCuentaCorriente__c/Dan360_TablaIntermediaCuentaCorriente__c.object-meta.xml
<CustomObject>
    <description>Objeto para recibir la información del Screenshot de cuenta corriente</description>
    <label>Tabla intermedia de cuenta corriente</label>
    <nameField>
        <label>Nombre de Tabla intermedia de cuenta cor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tabla intermedia de cuenta corriente</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>