force-app/main/default/objects/Dan360_TablaIntermediaCuentaCorriente__c/fields/Dan360_CodigoCliente__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CodigoCliente__c</fullName>
    <label>Código cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>