force-app/main/default/objects/Dan360_TablaIntermediaCuentaCorriente__c/fields/Dan360_CodigoEmpresaGrupo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CodigoEmpresaGrupo__c</fullName>
    <label>Código empresa grupo</label>
    <length>16</length>
    <type>Text</type>
</CustomField>