force-app/main/default/objects/Dan360_TablaIntermediaCuentaCorriente__c/fields/Dan360_FechaDocumento__c.field-meta.xml
<CustomField>
    <fullName>Dan360_FechaDocumento__c</fullName>
    <label>Fecha documento</label>
    <length>16</length>
    <type>Text</type>
</CustomField>