force-app/main/default/objects/Dan360_TablaIntermediaCuentaCorriente__c/fields/Dan360_IdRegistro__c.field-meta.xml
<CustomField>
    <fullName>Dan360_IdRegistro__c</fullName>
    <label>Id registro</label>
    <length>16</length>
    <type>Text</type>
</CustomField>