force-app/main/default/objects/Dan360_TablaIntermediaCuentaCorriente__c/fields/Dan360_ImporteDocumento__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ImporteDocumento__c</fullName>
    <label>Importe Documento</label>
    <length>16</length>
    <type>Text</type>
</CustomField>