force-app/main/default/objects/Dan360_TablaIntermediaCuentaCorriente__c/fields/Dan360_Moneda__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Moneda__c</fullName>
    <label>Moneda</label>
    <length>16</length>
    <type>Text</type>
</CustomField>