force-app/main/default/objects/Dan360_TablaIntermediaCuentaCorriente__c/fields/Dan360_OrdenAplicacion__c.field-meta.xml
<CustomField>
    <fullName>Dan360_OrdenAplicacion__c</fullName>
    <label>Orden aplicación</label>
    <length>16</length>
    <type>Text</type>
</CustomField>