force-app/main/default/objects/Dan360_TablaIntermediaCuentaCorriente__c/fields/Dan360_Remito__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Remito__c</fullName>
    <label>Remito</label>
    <length>16</length>
    <type>Text</type>
</CustomField>