force-app/main/default/objects/Dan360_TablaIntermediaCuentaCorriente__c/fields/Dan360_TipoDocumento__c.field-meta.xml
<CustomField>
    <fullName>Dan360_TipoDocumento__c</fullName>
    <label>Tipo documento</label>
    <length>16</length>
    <type>Text</type>
</CustomField>