force-app/main/default/objects/Dan360_TablaIntermediaCuentaCorriente__c/fields/Dan360_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Vencimiento__c</fullName>
    <label>Vencimiento</label>
    <length>16</length>
    <type>Text</type>
</CustomField>